--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,49 @@
   }
 
 .gastracker_fancybutton {
-    padding: 10px;
+    padding: 5px;
     font-size: 0.6rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.8rem;
     margin: 0.1rem;
-    background: #ffffff;
-    border: none;
-    border-radius: 30px;
-    color: #000;
-    font-weight: bold;
+    background-color: #1f1f1f;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    padding: 15px 30px;
+    font-size: 1em;
+    margin: 10px;
     cursor: pointer;
     transition: transform 0.3s, background-color 0.3s;
+}
+
+.gastracker_fancybutton:hover {
+    background-color: #ffffff;
+    color: #1f1f1f;
+}
+
+.gastracker_fancybutton_settings {
+    align-self: right;
+    padding: 5px;
+    font-size: 0.6rem;
+    padding: 0.5rem 0.8rem;
+    margin: 0.1rem;
+    background-color: #1f1f1f;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    padding: 15px 30px;
+    font-size: 1em;
+    margin: 10px;
+    cursor: pointer;
+    transition: transform 0.3s, background-color 0.3s;
+}
+
+.gastracker_fancybutton_settings:hover {
+    background-color: #ffffff;
+    color: #1f1f1f;
+}
+
+#badge_reload_time::-webkit-slider-thumb {
+    background: #000;
+}
+#badge_reload_time::-moz-range-thumb {
+    background: #000;
 }
